fog overflow fixed

--- a/ikea-vs-death-metal/src/Fog.css
+++ b/ikea-vs-death-metal/src/Fog.css
@@ -9,18 +9,28 @@
   
   /* ---------- Fog ---------- */
   .fogwrapper {
-    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    clip-path: inset(0 0 0 0);
+    /* height: 100%;
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 100%; */
     -webkit-filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
     filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
   }
+
   #foglayer_01, #foglayer_02, #foglayer_03 {
     height: 100%;
     position: absolute;
     width: 200%;
     pointer-events: none;
+    top: 0;
+    left: 0;
   }
   #foglayer_01 .image01, #foglayer_01 .image02,
   #foglayer_02 .image01, #foglayer_02 .image02,
